--- a/index.html
+++ b/index.html
@@ -119,35 +119,35 @@
       </div>
       <div class="row mb-4">
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio1.png">
-            <img src="/img/portfolio1-t.png" data-bp="/img/portfolio1.png" class="img-fluid"></a>
+          <a href="./img/portfolio1.png">
+            <img src="./img/portfolio1-t.png" data-bp="./img/portfolio1.png" class="img-fluid"></a>
         </div>
 
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio2.png">
-            <img src="/img/portfolio2-t.png" data-bp="/img/portfolio2.png" class="img-fluid"></a>
+          <a href="./img/portfolio2.png">
+            <img src="./img/portfolio2-t.png" data-bp="./img/portfolio2.png" class="img-fluid"></a>
         </div>
 
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio3.png">
-            <img src="/img/portfolio3-t.png" data-bp="/img/portfolio3.png" class="img-fluid"></a>
+          <a href="./img/portfolio3.png">
+            <img src="./img/portfolio3-t.png" data-bp="./img/portfolio3.png" class="img-fluid"></a>
         </div>
       </div>
 
       <div class="row mb-4">
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio4.png">
-            <img src="/img/portfolio4-t.png" data-bp="/img/portfolio4.png" class="img-fluid"></a>
+          <a href="./img/portfolio4.png">
+            <img src="./img/portfolio4-t.png" data-bp="./img/portfolio4.png" class="img-fluid"></a>
         </div>
 
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio5.png">
-            <img src="/img/portfolio5-t.png" data-bp="/img/portfolio5.png" class="img-fluid"></a>
+          <a href="./img/portfolio5.png">
+            <img src="./img/portfolio5-t.png" data-bp="./img/portfolio5.png" class="img-fluid"></a>
         </div>
 
         <div class="col-md-4 pb-3">
-          <a href="/img/portfolio6.png">
-            <img src="/img/portfolio6-t.png" data-bp="/img/portfolio6.png" class="img-fluid"></a>
+          <a href="./img/portfolio6.png">
+            <img src="./img/portfolio6-t.png" data-bp="./img/portfolio6.png" class="img-fluid"></a>
         </div>
       </div>
     </div>
@@ -184,7 +184,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 
-  <script src="/js/BigPicture.js"></script>
+  <script src="./js/BigPicture.js"></script>
 
   <script>
 
